# PumpRAG

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json  postcreate.sh
assets/: high_level.drawio  megaGymDataset.txt  system_architecutre.drawio
src/api/: app.py  requirements.txt
src/api/clients/: __init__.py  openai_client.py  rag_client.py
src/api/utils/: __init__.py  config.py  data.py
src/frontend/static/scripts/: index.js
src/frontend/static/styles/: index.css
src/frontend/templates/: index.html
src/notebooks/: data_viewer.ipynb
