[tool.poetry]
name = "PumpRAG"
version = "0.1.0"
description = "PumpRAG project with Poetry Packaging Tool."
authors = ["zaaachos <zachariadis.gs@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.13"
python-dotenv = "^1.0.1"
pinecone-client = "^4.1.2"
langchain = "^0.2.7"
datasets = "^2.20.0"
icecream = "^2.1.3"
torch = "2.2.1"
tiktoken = "^0.7.0"
fastapi = "^0.111.0"
httpx = "^0.27.0"
pytest = "^8.2.2"
uvicorn = "^0.30.1"
websockets = "^12.0"
jinja2 = "3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
